<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">




    <ImageView
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_login"
        android:layout_width="50dp"
        android:layout_height="50dp" />


    <EditText
        android:id="@+id/in_username"
        android:hint="@string/username"
        android:layout_marginEnd="@dimen/margin_h"
        android:layout_marginStart="@dimen/margin_h"
        android:layout_marginTop="32dp"
        android:background="@color/five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--@+id-->

    <EditText
        android:id="@+id/in_password"
        android:hint="@string/password"
        android:background="@color/five"
        android:layout_marginEnd="@dimen/margin_h"
        android:layout_marginStart="@dimen/margin_h"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/in_f_name"
        android:hint="@string/f_name"
        android:background="@color/five"
        android:layout_marginEnd="@dimen/margin_h"
        android:layout_marginStart="@dimen/margin_h"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/in_l_name"
        android:hint="@string/l_name"
        android:background="@color/five"
        android:layout_marginEnd="@dimen/margin_h"
        android:layout_marginStart="@dimen/margin_h"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/btn_reg"
        android:background="@color/four"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:text="@string/submit"
        android:layout_marginTop="@dimen/margin_v"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</LinearLayout>